--- a/main.css
+++ b/main.css
@@ -8,3 +8,9 @@ form{
     width:100%;
     height:1000px;
 }
+#tabBar{
+    background-color: #c0c1c2;
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+}
